Make and compile JavaFX and add experimental GUI
Thanks to Aenariss ant can now build and run JavaFX GUI. For now I
added dummy GUI window.