@@ -10,6 +10,8 @@
     <property name="dest.dir" value="dest"/>
     <property name="doc.dir"     value="doc"/>
     <property name="main-class"  value="Main"/>
+    <property name="jfx.dir"
+    value="lib/openjfx-11.0.2_linux-x64_bin-sdk/javafx-sdk-11.0.2/lib/"/>
 
     <target name="clean">
         <delete includeemptydirs="true">
@@ -26,7 +28,9 @@
     </target>
 
     <target name="compile">
-        <javac srcdir="${src.dir}" destdir="${build.dir}" includeantruntime="false"/>
+        <javac srcdir="${src.dir}" destdir="${build.dir}" includeantruntime="false" modulepath="${jfx.dir}">
+        <compilerarg line="--add-modules javafx.controls ${src.dir}/Main.java"/>
+        </javac>
         <jar destfile="${dest.dir}/ija-app.jar" basedir="${build.dir}">
             <manifest>
                 <attribute name="Main-Class" value="${main-class}"/>
@@ -36,6 +40,8 @@
 
 
     <target name="run">
-        <java jar="${dest.dir}/ija-app.jar" fork="true"/>
+        <java jar="${dest.dir}/ija-app.jar" fork="true" modulepath="${jfx.dir}">
+        <jvmarg line="--add-modules javafx.controls"/>
+        </java>
     </target>
 </project>
